main: Fixed Web Version not showing canvas. Compose Plugin version changes (fixed issues in iOS and Web) Fixed paddings on Content of Adaptive Scaffold

--- a/composeApp/src/jsMain/resources/index.html
+++ b/composeApp/src/jsMain/resources/index.html
@@ -6,9 +6,10 @@
     <title>GradingScale2</title>
     <link type="text/css" rel="stylesheet" href="styles.css">
     <script type="application/javascript" src="skiko.js"></script>
-    <script type="application/javascript" src="composeApp.js"></script>
 </head>
 <body>
     <canvas id="ComposeTarget"></canvas>
+    <script src="composeApp.js" type="application/javascript"></script>
+
 </body>
 </html>
