--- a/composeApp/src/jsMain/resources/index.html
+++ b/composeApp/src/jsMain/resources/index.html
@@ -2,14 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>GradingScale2</title>
-    <link type="text/css" rel="stylesheet" href="styles.css">
-    <script type="application/javascript" src="skiko.js"></script>
+    <style>
+        html, body {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            background-color: white;
+            overflow: hidden;
+        }
+        #ComposeTarget {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+    </style>
+    <!-- Important: Skiko.js must be loaded BEFORE your app's JS -->
+    <script src="skiko.js" type="application/javascript"></script>
 </head>
 <body>
-    <canvas id="ComposeTarget"></canvas>
-    <script src="composeApp.js" type="application/javascript"></script>
-
+<canvas id="ComposeTarget"></canvas>
+<script src="composeApp.js" type="application/javascript"></script>
 </body>
 </html>
