main: feat: Integrate for JS Firebase SDK and implement analytics and auth token providers for enhanced functionality

--- a/composeApp/src/jsMain/resources/index.html
+++ b/composeApp/src/jsMain/resources/index.html
@@ -20,6 +20,14 @@
             overflow: hidden;
         }
     </style>
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-analytics-compat.js"></script>
+    
+    <!-- Firebase configuration will be loaded from firebase-config.js -->
+    <script src="firebase-config.js"></script>
+    
     <!-- Important: Skiko.js must be loaded BEFORE your app's JS -->
     <script src="skiko.js" type="application/javascript"></script>
 </head>
